# NomadTerm-server

./: .gitignore  Cargo.toml  README.md  gemini-extension.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
contrib/: com.nomadterm.daemon.plist  nomadterm.desktop  nomadterm.service  windows-service.md
contrib/debian/: postinst  prerm
desktop/: index.html  package.json  tailwind.config.js  vite.config.ts
desktop/scripts/: generate_tauri_icon_source.py
desktop/src/: App.tsx  index.css  types.ts
desktop/src-tauri/: Cargo.toml  linux.desktop.hbs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: db.rs  lib.rs  main.rs
scripts/: bump-version.sh  install.sh
scripts/version/: 0.2.10.md  0.2.2.md  0.2.3.md  0.2.4.md  0.2.5.md  0.2.6.md  0.2.7.md  0.2.8.md  0.2.9.md  0.3.0.md  0.3.1.md  0.3.2.md  0.3.3.md  0.3.4.md  0.3.5.md  0.3.6.md  0.3.7.md  0.3.8.md
skills/nomadterm-agent-messaging/: SKILL.md
src/: bootstrap.rs  cli_context.rs  config.rs  db.rs  delivery.rs  identity.rs  instances.rs  launcher.rs  log.rs  main.rs  messages.rs  notify.rs  paths.rs  pidtrack.rs  router.rs  runtime_env.rs  terminal.rs  tool.rs  transcript.rs  update.rs  usage_tracker.rs
src/commands/: archive.rs  bundle.rs  config.rs  daemon.rs  events.rs  fork.rs  help.rs  hooks.rs  kill.rs  launch.rs  list.rs  listen.rs  mod.rs  relay.rs  reset.rs  reset_ops.rs  reset_preview.rs  resume.rs  run.rs  send.rs  start.rs  status.rs  stop.rs  term.rs  transcript.rs
src/core/: bundles.rs  detail_levels.rs  filters.rs  helpers.rs  launch_status.rs  mod.rs  tips.rs
src/gui/: app.rs  detail_panel.rs  mod.rs  qr_texture.rs  repo_panel.rs  server_task.rs  state.rs
src/hooks/: claude.rs  claude_args.rs  codex.rs  common.rs  mod.rs  (+4 more)
tests/: test_pty_delivery.rs  test_relay_roundtrip.rs  ws_protocol.rs
(+43 files in other folders)
