[package]
name = "nomadterm-desktop"
version = "0.2.10"
edition = "2021"

[lib]
name = "nomadterm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nomadterm-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
dirs = "5"
